--- a/index.html
+++ b/index.html
@@ -825,17 +825,16 @@
             <div class="library">
                 <div class="w-layout-grid library-grid-row top">
                     <h4 class="project-grid-label">INDEX</h4>
-                    <h4 class="project-grid-label">PROJECT</h4>
+                    <h4 class="project-grid-label">Competition</h4>
                     <div class="grid-category">
                         <div class="div-block-12">
-                            <h4 class="project-grid-label">CATEGORY</h4>
+                            <h4 class="project-grid-label">Results</h4>
                         </div>
                     </div>
                 </div>
-                <img src="https://assets.website-files.com/602da31562ecfd8b4b8a8317/604fe931f94d85f0bb117a9e_line03-phillip-lee.png" loading="lazy" sizes="(max-width: 479px) 92vw, 100vw" srcset="https://assets.website-files.com/602da31562ecfd8b4b8a8317/604fe931f94d85f0bb117a9e_line03-phillip-lee-p-500.png 500w, https://assets.website-files.com/602da31562ecfd8b4b8a8317/604fe931f94d85f0bb117a9e_line03-phillip-lee.png 704w" alt="" class="image-8"/>
                 <div data-w-id="6c43ec61-6b6c-aa5d-d26b-2e345ee22344" class="w-layout-grid library-grid-row r1">
                     <h3 class="library-text">01</h3>
-                    <h3 class="library-text">Apple</h3>
+                    <h3 class="library-text">CSAA</h3>
                     <div class="grid-category">
                         <div class="div-block-12">
                             <h3 class="library-text">In-Store</h3>
