--- a/Spin Up Season 2021-2022.html
+++ b/Spin Up Season 2021-2022.html
@@ -417,7 +417,7 @@
                 <h1 class="heading-1">
                     <span data-w-id="e09bc080-f81d-a284-cafd-73133a656b5a" class="h1-span1 fade-up">Vex Robotics Competition</span> 
                     <span class="h1-span-6 fade-up"> </span>
-                    <span data-w-id="e09bc080-f81d-a284-cafd-73133a656b5e" class="h1-span2 fade-up">‍Coconut Doggy </span>
+                    <span data-w-id="e09bc080-f81d-a284-cafd-73133a656b5e" class="h1-span2 fade-up">Coconut Doggy  </span>
                     <span class="h1-span3 fade-up"></span>
                 </h1>
             </div>
@@ -429,8 +429,8 @@
                 </h1>
             </div>
             <div data-w-id="e524cc6c-82ad-725d-d2bd-ec24f4ca8382" style="-webkit-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="hero-header-l3">
-                <h1 class="heading-1">
-                    <span data-w-id="5affb8ac-e36c-cb06-639e-d0c1c069574c" class="h1-span1 fade-up">2055 A / B</span>
+                <h1 class="heading-3">
+                    <span data-w-id="5affb8ac-e36c-cb06-639e-d0c1c069574c" class="h1-span1 fade-up">2055 A/ B </span>
                 </h1>
             </div>
         </div>
