Post Season update

--- a/Spin Up Season 2021-2022.html
+++ b/Spin Up Season 2021-2022.html
@@ -467,6 +467,15 @@
                 </h5>
                     <br/> 
                 <h3 class="heading-3">
+                    Devesh P 
+                </h3>
+                <h5>
+                    <div class="label filled Dpurples"> Builder </div>
+                    <div class="label filled purples"> Cad/Design </div>
+
+            
+                </h5>
+                <h3 class="heading-3">
                     Gavin
                 </h3>
                 <h5>
@@ -803,6 +812,43 @@
                                 <div style="margin-right:.5em" class="label filled round blue">Judges</div> 
                                 <div style="margin-right:.5em" class="label filled round purples">Innovate</div> 
                                 <div style="margin-right:.5em" class="label filled round blue">Worlds Invitaion</div> 
+                            </div>
+                        </div>
+                        <img src="https://assets.website-files.com/602da31562ecfd8b4b8a8317/605d062cd5a38b98fe816b99_icon-go-arrow.svg" loading="lazy" alt="" class="library-icon"/>
+                    </div>
+                </a>
+                <a data-w-id="b09768a8-c88b-5ede-e243-8bf7f3e30db0" style="opacity:1" href="" target="_blank" class="link-block-2 w-inline-block">
+                    <div data-w-id="b93f34fa-946f-41c3-4f41-d3009f7ff373" class="w-layout-grid library-grid-row r8">
+                        <h3 class="library-text">11</h3>
+                        <h3 class="library-text">Worlds High School Techonolgy </h3>
+                        <div class="grid-category">
+                            <div class="div-block-12">
+                                <h3 class="library-text">Round of 16</h3>
+                            </div>
+                        </div>
+                        <img src="https://assets.website-files.com/602da31562ecfd8b4b8a8317/605d062cd5a38b98fe816b99_icon-go-arrow.svg" loading="lazy" alt="" class="library-icon"/>
+                    </div>
+                </a>
+                <a data-w-id="b09768a8-c88b-5ede-e243-8bf7f3e30db0" style="opacity:1" href="" target="_blank" class="link-block-4 w-inline-block">
+                    <div data-w-id="b93f34fa-946f-41c3-4f41-d3009f7ff373" class="w-layout-grid library-grid-row r10">
+                        <h3 class="library-text">11</h3>
+                        <h3 class="library-text">Worlds Middle School Science </h3>
+                        <div class="grid-category">
+                            <div class="div-block-12">
+                                <h3 class="library-text">Tournament Champions</h3>
+                                <div style="margin-right:.5em" class="label filled round purple">Design</div>                             
+                            </div>
+                        </div>
+                        <img src="https://assets.website-files.com/602da31562ecfd8b4b8a8317/605d062cd5a38b98fe816b99_icon-go-arrow.svg" loading="lazy" alt="" class="library-icon"/>
+                    </div>
+                </a>
+                <a data-w-id="b09768a8-c88b-5ede-e243-8bf7f3e30db0" style="opacity:1" href="" target="_blank" class="link-block-4 w-inline-block">
+                    <div data-w-id="b93f34fa-946f-41c3-4f41-d3009f7ff373" class="w-layout-grid library-grid-row r10">
+                        <h3 class="library-text">12</h3>
+                        <h3 class="library-text">VEX Dome Middle School </h3>
+                        <div class="grid-category">
+                            <div class="div-block-12">
+                                <h3 class="library-text"> Round of 16</h3>
                             </div>
                         </div>
                         <img src="https://assets.website-files.com/602da31562ecfd8b4b8a8317/605d062cd5a38b98fe816b99_icon-go-arrow.svg" loading="lazy" alt="" class="library-icon"/>
