--- a/formelife.html
+++ b/formelife.html
@@ -108,7 +108,7 @@
             <div class="container w-container">
                 <h1>Heading</h1>
                 <h2>Forme Life</h2>
-                <h2 class="heading-2 sans">Case STudy</h2>
+                <h2 class="heading-2 sans">Case Study</h2>
                 <h3>Heading</h3>
                 <h4>Heading</h4>
                 <h5>Heading 6</h5>
