--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
                     <h3 class="library-text">Mall of America</h3>
                     <div class="grid-category">
                         <div class="div-block-12">
-                            <h3 class="library-text">Aug 4-5</h3>
+                            <h3 class="library-text">Rank 59</h3>
                         
                         </div>
                     </div>
