--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                 <h1 class="heading-1">
                     <span data-w-id="e09bc080-f81d-a284-cafd-73133a656b5a" class="h1-span1 fade-up">Vex Robotics Competition</span> 
                     <span class="h1-span-6 fade-up"> </span>
-                    <span data-w-id="e09bc080-f81d-a284-cafd-73133a656b5e" class="h1-span2 fade-up">2055 </span>
+                    <span data-w-id="e09bc080-f81d-a284-cafd-73133a656b5e" class="h1-span2 fade-up">2055 A & X </span>
                     <span class="h1-span3 fade-up"></span>
                 </h1>
             </div>
@@ -428,14 +428,18 @@
                     <span class="h1-span0"></span>
                 </h1>
             </div>
+        <!--
             <div data-w-id="e524cc6c-82ad-725d-d2bd-ec24f4ca8382" style="-webkit-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="hero-header-l3">
                 <h1 class="heading-3">
                     <br/>
                     <br/>
-                    <span data-w-id="5affb8ac-e36c-cb06-639e-d0c1c069574c" class="h1-span1 fade-up">Hold on tight were completing some maintance </span>
+                    <span data-w-id="5affb8ac-e36c-cb06-639e-d0c1c069574c" class="h1-span1 fade-up"> </span>
                 </h1>
             </div>
+            -->
         </div>
+
+        
         <div class="w-layout-grid container intro">
             <div id="w-node-_43093e0e-9396-7318-459f-43c1fc06eea6-30158dc2" data-w-id="43093e0e-9396-7318-459f-43c1fc06eea6" style="opacity:0;-webkit-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="home-intro">
                 <a href="https://www.instagram.com/2055.vrc/" target="_blank" class="link-block w-inline-block">
@@ -517,14 +521,14 @@
             <div class="divider-line"></div>
             <div data-w-id="4a8ff214-000e-25cc-8702-4aa90226e783" class="forme-case-2">
                 <div id="w-node-_4a8ff214-000e-25cc-8702-4aa90226e784-30158dc2" class="featured-image">
-                    <img src="Media/Applebycata.gif" loading="lazy" alt=""/>
+                    <img src="Media/IMG_4058.JPG" loading="lazy" alt=""/>
                 </div>
                 <div id="w-node-_4a8ff214-000e-25cc-8702-4aa90226e788-30158dc2" class="hero-module-content alt">
                     <div class="label filled">Team</div>
-                    <h2 class="heading-2">2055B </h2>
-                    <h2 class="heading-2 sans">Coconut Doggy</h2>
+                    <h2 class="heading-2">2055A </h2>
+                    <h2 class="heading-2 sans">Cappybaras</h2>
                     <div class="home-hero-block">
-                        <p class="paragraph">We are a first year middle school team who have come great lengths this VRC SPIN UP season. Our catapult deisgn has earned many awards such as Build and Judges. We will be heading to Dallas for the 2023 Vex Worlds, so see you there.</p>
+                        <p class="paragraph"> Final testing before Qualifying Matchups for our first ever 2023-2024 Robotics Competition at Mall of America. Focusing on the half-court longshot, and solo Autonomous Win Point in an arena filled with vibrant banners and futuristic displays. Excited spectators and enthusiastic environment in Bloomington Minneapolis.</p>
                         <div class="divider-line"></div>
                         <div class="w-layout-grid grid-3">
                             <div class="div-block-5">
@@ -539,7 +543,7 @@
                                 <img src="https://assets.website-files.com/602da31562ecfd8b4b8a8317/605d185cb7f686d912d0d0e1_icon-go-arrow-small.svg" loading="lazy" style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0, 0);transform-style:preserve-3d;opacity:1" alt="" class="cta-arrow light"/>
                                 <img src="https://assets.website-files.com/602da31562ecfd8b4b8a8317/605d184fcf901eca896e16ff_icon-go-arrow-dark-small.svg" loading="lazy" style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0, 0);transform-style:preserve-3d;opacity:0" alt="" class="cta-arrow black"/>
                             </a>
-                            <link rel="prerender" href="https://www.robotevents.com/teams/VRC/2055B"/>
+                            <link rel="prerender" href="https://www.robotevents.com/teams/VRC/2055A"/>
                         </div>
                     </div>
                 </div>
@@ -575,7 +579,7 @@
                     </div>
                 </div>
 
-                
+                <!-- 
                 <div id="w-node-c0b063e1-c002-7dc9-b2ee-757b0e477e30-30158dc2" class="featured-image">
                     <img src="Media/Q49A.gif" loading="lazy" alt="" class="case-study-image"/>
                 </div>
@@ -605,7 +609,7 @@
                         </div>
                     </div>
                 </div>
-
+            -->
 
             </div>
         </div>
