--- a/index.html
+++ b/index.html
@@ -427,6 +427,11 @@
                     <span class="h1-span4 fade-up"> </span>
                     <span class="h1-span0"></span>
                 </h1>
+                <h1 class="heading-1">
+                    <span class="h1-span3 fade-up">Red PAnda</span>
+                    <span class="h1-span4 fade-up"> </span>
+                    <span class="h1-span0"></span>
+                </h1>
             </div>
         <!--
             <div data-w-id="e524cc6c-82ad-725d-d2bd-ec24f4ca8382" style="-webkit-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="hero-header-l3">
@@ -533,7 +538,7 @@
 
 
         <div data-w-id="ace72ef6-14f1-7f4a-c53f-27a66a5b587f" style="opacity:0;-webkit-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 40px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)">
-            <h6 class="heading-6 mobile">2055B Coconut Doggy</h6>
+            <h6 class="heading-6 mobile">2055B RED PANDA</h6>
             <h3 class="heading-3">
                 <h3 class="heading-3">
                     Kevin Ying
@@ -583,7 +588,7 @@
         <div id="featured" class="divider-section featured wf-section">
             <div class="separator-rotate">
                 <div class="separator-wrapper red">
-                    <div data-w-id="2f25b2d7-f053-f996-14e6-1a174f182378" class="text-line-separator red"> CAPYBARA X COCONUT DOGGY                                            CAPYBARA X COCONUT DOGGY                                            CAPYBARA X COCONUT DOGGY                                            CAPYBARA X COCONUT DOGGY                                                                                       CAPYBARA X COCONUT DOGGY                                         CAPYBARA X COCONUT DOGGY                                            CAPYBARA X COCONUT DOGGY                                            CAPYBARA X COCONUT DOGGY                                            CAPYBARA X COCONUT DOGGY  </div>
+                    <div data-w-id="2f25b2d7-f053-f996-14e6-1a174f182378" class="text-line-separator red"> CAPYBARA X RED PANDA                                            CAPYBARA X RED PANDA                                            CAPYBARA X RED PANDA                                            CAPYBARA X RED PANDA                                                                                       CAPYBARA X RED PANDA                                         CAPYBARA X RED PANDA                                            CAPYBARA X RED PANDA                                            CAPYBARA X RED PANDA                                            CAPYBARA X RED PANDA  </div>
                 </div> 
             </div>
             <h1 data-w-id="2f25b2d7-f053-f996-14e6-1a174f18237a" class="heading-1 divider-style">Featured – Featured – Featured</h1>
@@ -709,8 +714,8 @@
                 </div>
                 <img src="https://assets.website-files.com/602da31562ecfd8b4b8a8317/604fe931f94d85f0bb117a9e_line03-phillip-lee.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 94vw, 100vw" srcset="https://assets.website-files.com/602da31562ecfd8b4b8a8317/604fe931f94d85f0bb117a9e_line03-phillip-lee-p-500.png 500w, https://assets.website-files.com/602da31562ecfd8b4b8a8317/604fe931f94d85f0bb117a9e_line03-phillip-lee.png 704w" alt="" class="image-8"/>
                 <div data-w-id="d88e88ed-e89e-fd89-6287-37e92f1c968a" style="opacity:1" class="w-layout-grid library-grid-row r1">
-                    <h3 class="library-text">01</h3>
-                    <h3 class="library-text">Mall of America</h3>
+                    <h3 class="library-signature">01</h3>
+                    <h3 class="library-text">Mall of America Signature</h3>
                     <div class="grid-category">
                         <div class="div-block-12">
                             <h3 class="library-text">Rank 59</h3>
@@ -720,7 +725,7 @@
                     <img src="https://assets.website-files.com/602da31562ecfd8b4b8a8317/605d062cd5a38b98fe816b99_icon-go-arrow.svg" loading="lazy" alt="" class="library-icon"/>
                 </div>
                 <div data-w-id="8fdf01ed-f342-6c47-be48-01e023ed0bfc" style="opacity:1" class="w-layout-grid library-grid-row r3">
-                    <h3 class="library-text">02</h3>
+                    <h3 class="library-signature">02</h3>
                     <h3 class="library-text">Speedway Signature</h3> 
                     <div class="grid-category">
                         <div class="div-block-12">
@@ -731,10 +736,10 @@
                     <img src="https://assets.website-files.com/602da31562ecfd8b4b8a8317/605d062cd5a38b98fe816b99_icon-go-arrow.svg" loading="lazy" alt="" class="library-icon"/>
                 </div>
                 <a data-w-id="b09768a8-c88b-5ede-e243-8bf7f3e30db0" style="opacity:1" href="" target="_blank" class="link-block-2 w-inline-block">
-                    <div data-w-id="b93f34fa-946f-41c3-4f41-d3009f7ff373" class="w-layout-grid library-grid-row r8">
-                        <h3 class="library-text">03</h3>
-                        <h3 class="library-signature">UC Berkeley Signature</h3> 
-                        
+                    <div display:inline-block;  data-w-id="b93f34fa-946f-41c3-4f41-d3009f7ff373" class="w-layout-grid library-grid-row r8" >
+                        <h3 class="library-signature">03</h3>
+                        <h3 class="library-text"> 
+                            span<  UC Berkeley Signature</h3>
                         <div class="grid-category">
                             <div class="div-block-12">
                                 <h3 class="library-text">Rank 60</h3>
