saw capitlized A mistake

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                     <span class="h1-span0"></span>
                 </h1>
                 <h1 class="heading-1">
-                    <span class="h1-span3 fade-up">Red PAnda</span>
+                    <span class="h1-span3 fade-up">Red Panda</span>
                     <span class="h1-span4 fade-up"> </span>
                     <span class="h1-span0"></span>
                 </h1>
