--- a/index.html
+++ b/index.html
@@ -1167,7 +1167,7 @@
                         <img src="https://assets.website-files.com/602da31562ecfd8b4b8a8317/605d0452bdf868a3e3b486df_icon-go-arrow-black.svg" loading="lazy" alt="" class="card-image"/>
                     </div>
                 </a> -->
-                 <a data-w-id="c4a9dd26-cb36-995f-95eb-9095df27a9d9" href="https://twitter.com/phillipylee/status/1367146461985529857" target="_blank" class="bonus-card blue w-inline-block"> 
+                 <a data-w-id="c4a9dd26-cb36-995f-95eb-9095df27a9d9" href="" target="_blank" class="bonus-card blue w-inline-block"> 
                     <h3 class="heading-14 blue">
                         EDITOR&#x27;S NOTE     
                         <span class="small-caption">2055&#x27;S NOTE</span>
