--- a/index.html
+++ b/index.html
@@ -470,7 +470,11 @@
                         <div class="divider-line"></div>
                         <div class="w-layout-grid grid-3">
                             <div class="div-block-5">
+                                <div class="heading-3">
+                                <a class="heading-3" href="https://forms.gle/jSrqqJR3v6R4zndE8"> Google Form Link</a> 
+                                </div>
                                 <div class="label detail">
+                                    
                                     Discord Q&A for 2055 or Vex https://discord.gg/3vdFrswkd5 <br/>
 mi3Lschool@gmail.com<br/>
 TXT/WhatsApp/call <br/>416-523-5965<br/>
@@ -479,12 +483,12 @@ TXT/WhatsApp/call <br/>416-523-5965<br/>
 
                                 </div>
                             </div>
-                            <a data-w-id="3c1968bf-3a00-0976-a8cb-5dd9bf4bf5ad" style="background-color:rgb(12,12,12)" href="https://www.robotevents.com/teams/VRC/2055B" target="_blank" class="button forme w-inline-block">
-                                <div style="color:rgb(244,231,212)" class="button-text">Instagram </div>
+                            <a data-w-id="3c1968bf-3a00-0976-a8cb-5dd9bf4bf5ad" style="background-color:rgb(12,12,12)" href="https://forms.gle/jSrqqJR3v6R4zndE8" target="_blank" class="button forme w-inline-block">
+                                <div style="color:rgb(244,231,212)" class="button-text">Sign Up Now</div>
                                 <img src="https://assets.website-files.com/602da31562ecfd8b4b8a8317/605d185cb7f686d912d0d0e1_icon-go-arrow-small.svg" loading="lazy" style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0, 0);transform-style:preserve-3d;opacity:1" alt="" class="cta-arrow light"/>
                                 <img src="https://assets.website-files.com/602da31562ecfd8b4b8a8317/605d184fcf901eca896e16ff_icon-go-arrow-dark-small.svg" loading="lazy" style="-webkit-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0, 0);transform-style:preserve-3d;opacity:0" alt="" class="cta-arrow black"/>
                             </a>
-                            <link rel="prerender" href="https://www.instagram.com/2055.vrc/"/>
+                            <link rel="prerender" href="https://forms.gle/jSrqqJR3v6R4zndE8"/>
                         </div>
                     </div>
                 </div>
@@ -737,7 +741,7 @@ TXT/WhatsApp/call <br/>416-523-5965<br/>
                 </div>
                 <div id="w-node-_7f34fe82-3b92-a0d3-9ce7-fd498937816e-30158dc2" class="hero-module-content alt">
                     <div class="label filled">Team</div>
-                    <h2 class="heading-2">2055C</h2>
+                    <h2 class="heading-2">2055X</h2>
                     <h2 class="heading-2 sans">Red Pandas</h2>
                      <div class="home-hero-block">
                         <p class="paragraph">This year we have learned alot through VRC Spin Up. We expirenced new challenges and overcame them in various sectors such as programing, cadding and especially in building. Our team pushes for high results and gets creative for all the challenges presented in the VEX Robotics Competition. Come say hi to us at Worlds!</p>
