--- a/index.html
+++ b/index.html
@@ -671,13 +671,13 @@ TXT/WhatsApp/call <br/>416-523-5965<br/>
                     <br/> 
                     
                 <h3 class="heading-3">
-                   Alina Zhang
-                </h3>
-                <br/>
-                <h5>
-                    <div class="label filled Dpurples">Builder</div>
-                    <div class="label filled Dblue"> Scouting Lead </div>
-                </h5>
+                    Victoria
+                    </h3>
+                    <br/>
+                    <h5>
+                        <div class="label filled Dpurples">Builder</div>
+                        <div class="label filled Dblue"> Scouting Lead </div>
+                    </h5>
 
             </h3>
         </div>
