--- a/index.html
+++ b/index.html
@@ -679,10 +679,10 @@ TXT/WhatsApp/call <br/>416-523-5965<br/>
                     <h5>
                         <div class="label filled Dpurples">Builder</div>
                         <div class="label filled Dblue"> Scouting Lead </div>
-                    </h5>                <h3 class="heading-3">                <h3 class="heading-3">
+                    </h5>               
                         <br/>
                         
-                        <h3 class="heading-3"></h3>
+                        <h3 class="heading-3">
                         Victoria
                         </h3>
                         <br/>
@@ -692,7 +692,7 @@ TXT/WhatsApp/call <br/>416-523-5965<br/>
                         </h5>
                             <br/> 
                         
-                        <h3 class="heading-3"></h3>
+                        <h3 class="heading-3">
                             Kyra
                             </h3>
                             <br/>
@@ -702,7 +702,7 @@ TXT/WhatsApp/call <br/>416-523-5965<br/>
                             </h5>
                                 <br/> 
 
-                        <h3 class="heading-3"></h3>
+                        <h3 class="heading-3">
                                 Eva
                                 </h3>
                                 <br/>
@@ -711,7 +711,7 @@ TXT/WhatsApp/call <br/>416-523-5965<br/>
                                 </h5>
                                     <br/> 
 
-                        <h3 class="heading-3"></h3>
+                        <h3 class="heading-3">
                                     Sophia
                                     </h3>
                                     <br/>
@@ -720,7 +720,7 @@ TXT/WhatsApp/call <br/>416-523-5965<br/>
                                     </h5>
                                         <br/> 
 
-                         <h3 class="heading-3"></h3>
+                         <h3 class="heading-3">
                                         Daniel
                                         </h3>
                                         <br/>
