--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@ TXT/WhatsApp/call <br/>416-523-5965<br/>
                     </h5>
                         <br/> 
             
-                        <h3 class="heading-3"></h3>
+                        <h3 class="heading-3">
                         Victoria Chen
                         </h3>
                         <br/>
@@ -689,7 +689,7 @@ TXT/WhatsApp/call <br/>416-523-5965<br/>
                         </h5>
                             <br/> 
                         
-                        <h3 class="heading-3"></h3>
+                        <h3 class="heading-3">
                             Kayra Han Sevinc
                             </h3>
                             <br/>
@@ -700,7 +700,7 @@ TXT/WhatsApp/call <br/>416-523-5965<br/>
                             </h5>
                                 <br/> 
 
-                        <h3 class="heading-3"></h3>
+                        <h3 class="heading-3">
                                 Eva Liu
                                 </h3>
                                 <br/>
@@ -710,7 +710,7 @@ TXT/WhatsApp/call <br/>416-523-5965<br/>
                                 </h5>
                                     <br/> 
 
-                        <h3 class="heading-3"></h3>
+                        <h3 class="heading-3">
                                     Sophia Xu
                                     </h3>
                                     <br/>
