--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             opacity: 1;
         }
 
-        html.w-mod-js: not(.w-mod-ix) [data-w-id="be5ad81d-b45e-c722-4a19-273e412583ad"] {
+        html.w-mod-js: not(.w-mofd-ix) [data-w-id="be5ad81d-b45e-c722-4a19-273e412583ad"] {
             opacity: 0;
             -webkit-transform: translate3d(0, 0, 0) scale3d(0.9, 0.9, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
             -moz-transform: translate3d(0, 0, 0) scale3d(0.9, 0.9, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
@@ -540,10 +540,7 @@
                                 <a class="heading-3" href="https://forms.gle/jSrqqJR3v6R4zndE8"> The Google Form Link to sign up</a> 
                                 </div>
                                 <div class="label detail">
-
                                     Our discord for Q/A: https://discord.gg/3vdFrswkd5 <br/>
-
-
 mi3Lschool@gmail.com<br/>
 TXT/WhatsApp/call <br/>416-523-5965<br/>
 
